
WIP      Port the file scanner cache from AEL to AML. This will increase the scanning speed a lot!

WIP      Implemented "Most played MAME machines"

WIP      Implemented "Recently played MAME machines"

WIP      Implemented "Most played SL ROMs"

WIP      Implemented "Recently played SL ROMs"


[B]Advanced Emulator Launcher | version 0.9.4 | xx March 2018[/B]

WIP      Build Fanarts from other pieces of artwork.

WIP      Support MAME artwork by Mr. Do's. Note that Clones use Parnet's artwork automatically.

FEATURE  "Browse by MAME short name" and "Browse by MAME long name" alphabetical catalogs.

FEATURE  Renamed plugin from plugin.program.advanced.MAME.launcher to plugin.program.AML.
         Shorter name, shorter databases, higher speed.

FEATURE  Some skin helper commands to display widgets.

FEATURE  Support bestgames.ini and series.ini.

FEATURE  Generate machine plot from MAME XML information.

FEATURE  New Main filters Normal and Unusual.

FEATURE  Show ROMs of a MAME machine that should be in a ZIP file. Supports Merged, Split and
         Non-merged sets, CHDs, BIOS and Devices with ROMs.

FEATURE  Audit MAME ROMs for all machines.

FEATURE  Show SL ROMs of a SL entry. Supports Merged, Split and Non-merged sets and SL CHDs.

FEATURE  Audit SL ROMs.

FEATURE  Display MAMEINFO.DAT information.

FEATURE  Display HISTORY.DAT in information.

FEATURE  Display gameinit.dat in information.

FEATURE  Display command.dat in information.

FEATURE  At launching, do not check ROMs for machines which doesn't have ROMs.
         Requires loading machines database, which will slow down launching process a lot!
         A hashed database of machines is necessary to speed up plugin.
         Better solution for now: do not do any check. Let MAME fail if there are ROM/CHD errors.

FEATURE  Allow user to choose default assets as AEL does in addon seetings.

FEATURE  Trailer support in MAME machines and Software Lists.

FEATURE  Manage MAME Favourites context menu.
